[project]
name = "agents-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.3.0",
    "langchain>=0.3.24",
    "langgraph-checkpoint>=2.0.25",
    "langgraph>=0.3.34",
    "langchain-groq>=0.3.2",
    "langchain-google-genai>=2.1.3",
    "langgraph-checkpoint-sqlite>=2.0.6",
]
